# libqmsstyle

./: CMakeLists.txt  DOCUMENTATION.md  LibQmsstylesConfig.cmake.in  README.md  libqmsstyle.cpp  libqmsstyle.h  libqmsstyle_global.h  style.cpp  style.h  styleclass.cpp  styleclass.h  util.cpp  util.h
style/: class.cpp  class.h  definitions.h  property.cpp  property.h  propertystream.cpp  propertystream.h  style.cpp  style.h  visualenumsmap.h  visualpartsmap.h  visualstatesmap.h
testing/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
